# parallelism-formation

./: .gitignore  Makefile  README.md  pyproject.toml  softmax_one.py
pretrained-tokenizer/: tokenizer
slides/: 1_data_loading.md  2_training_optimizations.md  3_distributed_training.md
src/: utils.py
src/0-setup/: pre_tokenize.py
src/0_setup/: data_download.py
src/1-data_loading/: benchmark.py  data_download.py  ex1.py  tokenizer_train.py
src/1-data_loading/correction/: ex1_cor.py
src/1_data_loading/: benchmark.py
src/data_loading_1/: README.md  benchmark.py  ex1.py  ex2.py
src/data_loading_1/correction/: ex1_cor.py  ex2_cor.py
src/setup_0/: pre_tokenize.py
